--- a/raytracer/main/mainwindow.ui
+++ b/raytracer/main/mainwindow.ui
@@ -67,6 +67,15 @@
        </color>
       </brush>
      </colorrole>
+     <colorrole role="PlaceholderText">
+      <brush brushstyle="NoBrush">
+       <color alpha="128">
+        <red>208</red>
+        <green>208</green>
+        <blue>208</blue>
+       </color>
+      </brush>
+     </colorrole>
     </active>
     <inactive>
      <colorrole role="WindowText">
@@ -123,6 +132,15 @@
        </color>
       </brush>
      </colorrole>
+     <colorrole role="PlaceholderText">
+      <brush brushstyle="NoBrush">
+       <color alpha="128">
+        <red>208</red>
+        <green>208</green>
+        <blue>208</blue>
+       </color>
+      </brush>
+     </colorrole>
     </inactive>
     <disabled>
      <colorrole role="WindowText">
@@ -176,6 +194,15 @@
         <red>119</red>
         <green>119</green>
         <blue>119</blue>
+       </color>
+      </brush>
+     </colorrole>
+     <colorrole role="PlaceholderText">
+      <brush brushstyle="NoBrush">
+       <color alpha="128">
+        <red>208</red>
+        <green>208</green>
+        <blue>208</blue>
        </color>
       </brush>
      </colorrole>
@@ -251,14 +278,26 @@
     <widget class="QPushButton" name="pushButton">
      <property name="geometry">
       <rect>
-       <x>2</x>
+       <x>8</x>
        <y>22</y>
        <width>113</width>
        <height>32</height>
       </rect>
      </property>
+     <property name="autoFillBackground">
+      <bool>false</bool>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">background-color: rgb(138, 226, 52);</string>
+     </property>
      <property name="text">
       <string>Pause</string>
+     </property>
+     <property name="default">
+      <bool>false</bool>
+     </property>
+     <property name="flat">
+      <bool>false</bool>
      </property>
     </widget>
     <widget class="QSlider" name="horizontalSlider">
@@ -304,7 +343,7 @@
     <widget class="QLabel" name="fpsLabel">
      <property name="geometry">
       <rect>
-       <x>120</x>
+       <x>140</x>
        <y>30</y>
        <width>60</width>
        <height>16</height>
@@ -330,11 +369,14 @@
     <widget class="QPushButton" name="pushButton_5">
      <property name="geometry">
       <rect>
-       <x>2</x>
-       <y>24</y>
+       <x>8</x>
+       <y>22</y>
        <width>113</width>
        <height>32</height>
       </rect>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">background-color: rgb(138, 226, 52);</string>
      </property>
      <property name="text">
       <string>Pause</string>
@@ -380,7 +422,7 @@
     <widget class="QLabel" name="fpsLabel_2">
      <property name="geometry">
       <rect>
-       <x>120</x>
+       <x>137</x>
        <y>31</y>
        <width>60</width>
        <height>16</height>
