Separated the Information Window into its own component. Added the infrastructure to render a preview of the currently selected object (its material included, that's the idea...). The goal is to have a material editor that will alter the object in the main scene.

--- a/raytracer/main/qml.qrc
+++ b/raytracer/main/qml.qrc
@@ -1,5 +1,6 @@
 <RCC>
     <qresource prefix="/">
         <file>raytracer.qml</file>
+        <file>InformationWindow.qml</file>
     </qresource>
 </RCC>
