Wrapping upp another version of settings. Added a settings window to the raytracer.

--- a/raytracer/main/qml.qrc
+++ b/raytracer/main/qml.qrc
@@ -2,5 +2,6 @@
     <qresource prefix="/">
         <file>raytracer.qml</file>
         <file>InformationWindow.qml</file>
+        <file>SettingsWindow.qml</file>
     </qresource>
 </RCC>
