Adding a Fontello font file and archive. Started using glyphs in the application for icons on buttons and labels.

--- a/raytracer/main/qml.qrc
+++ b/raytracer/main/qml.qrc
@@ -3,5 +3,6 @@
         <file>raytracer.qml</file>
         <file>InformationWindow.qml</file>
         <file>SettingsWindow.qml</file>
+        <file alias="fontello">fontello.ttf</file>
     </qresource>
 </RCC>
