Added the B612 font (https://github.com/polarsys/b612)

--- a/raytracer/main/qml.qrc
+++ b/raytracer/main/qml.qrc
@@ -4,5 +4,6 @@
         <file>InformationWindow.qml</file>
         <file>SettingsWindow.qml</file>
         <file alias="fontello">fontello.ttf</file>
+        <file alias="B162">B612Mono-Regular.ttf</file>
     </qresource>
 </RCC>
