Added a xmas world with some spheres and a nice background texture

--- a/raytracer/main/textures.qrc
+++ b/raytracer/main/textures.qrc
@@ -1,5 +1,6 @@
 <RCC>
     <qresource prefix="/">
         <file alias="clouds">../clouds.png</file>
+        <file alias="winter">../winter.jpg</file>
     </qresource>
 </RCC>
